1/15/2007 - jdiamond
=====================

 * Changed the style (and structure) of Manager interface forms

1/14/2007 - jdiamond
=====================

 * (trac #190) Added a TOS checkbox to the order interface and settings to control
   it to the manager interface.
 * (trac #193) Fixed a bug that was preventing settings that don't have an entry
   in the settings table from being saved properly.

1/12/2007 - jdiamond
=====================

 * (trac #115) Added a note field similar to what exists for product purchases for hosting service 
   purchases and domain service purchases as well.
 * Added counts for web/domain/product purchases to the tabs on the View Account page

1/10/2007 - jdiamond
=====================

 * (trac #165) Tweaked the select box widget to show a "No Data" message whenever there are no options available.  
   The message can be customized by setting the "empty" parameter on the form_field tag.
 * (trac #166) Also tweaked the table widget to show a "No Data" message.

1/9/2007 - jdiamond
=====================

 * (trac #175) Standardized on "Zip / Postal Code" as a label in the manager and order interfaces.  Also standardized the order of the City, State, Postal Code, and Country fields (in that order) in all forms.

1/8/2007 - jdiamond
=====================

 * (trac #164) Made the Order Interface's page title a setting and gave it its own
   tab on the Manager > Administration > Settings page
 * (trac #152) Added a "public" flag to hosting services, domain services, and products.
   Only products/services with a public flag are available to the customer through the
   Order interface (and the future customer interface).

1/7/2007 - jdiamond
=====================

 * Integrated the dhtmlxTabbar project to provide a DHTML tab bar for the view account,
   view server, and settings pages.  As a result, all of the separate template files
   for each of the tabs were combined into one template for each page.

1/5/2007 - jdiamond