@@ -344,6 +344,17 @@
       </urlfields>
     </page>
 
+    <page name="addon"
+          title="[ADD_ON_PRODUCTS_AND_SERVICES]"
+          class="AddOnPage"
+          class_file="manager/pages/AddOnPage.class.php"
+          parent="services"
+          url="manager_content.php?page=addon">
+      <templates>
+        <template name="default" file="manager_AddOnPage.tpl"/>
+      </templates>
+    </page>          
+
     <page name="services_ip_manager"
           title="[IP_ADDRESS_MANAGER]"
           class="IPManagerPage"
