@@ -33,6 +33,8 @@
     <phrase id="ADD_LINE_ITEM">Add Line Item</phrase>
     <phrase id="ADD_NEW_USER">Add New User</phrase>
     <phrase id="ADD_NOTE">Add Note</phrase>
+    <phrase id="ADD_ON_PRODUCTS_AND_SERVICES">Add-On Products and Services</phrase>
+    <phrase id="ADD_ONS">Add-Ons</phrase>
     <phrase id="ADD_OR_UPDATE_PRICE">Add / Update Price</phrase>
     <phrase id="ADD_PRODUCT">Add Product</phrase>
     <phrase id="ADD_SERVER">Add Server</phrase>
