@@ -1,3 +1,8 @@
+1/17/2007 - jdiamond
+=====================
+
+ * Changed the default menu icon size from 18x18 to the appropriate 16x16 (hard-coded into dhtmlXTree)
+
 1/15/2007 - jdiamond
 =====================
 
